--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -1,7 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 .markdown ul li {
-  list-style-type: disc;
+    list-style-type: disc;
+}
+
+img.w-full.rounded.rounded-b-none.h-48.object-cover {
+    height: 150px;
+    width: 150px;
+}
+
+img.w-full.h-48.object-cover {
+    height: 150px;
+    width: 150px;
+}
+
+a.text-xl.text-gray-600 {
+    font-size: 3em;
 }
